// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
     
    expenses
     totalling 
    $2.34
  </h2>
</div>
`;

exports[`should render ExpensesSummary with empty expenses 1`] = `
<div>
  <h2>
    Viewing 
     
    expenses
     totalling 
    $0.00
  </h2>
</div>
`;

exports[`should render ExpensesSummary with expenses 1`] = `
<div>
  <h2>
    Viewing 
     
    expenses
     totalling 
    $234.00
  </h2>
</div>
`;
